Fix theme change icons being invisible in Firefox

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1484,7 +1484,7 @@ div label[for=ui-component-toggle__yearly] {
   }
   
   .darkmode-btn {
-  border-radius:64px;
+  border-radius:50%;
   z-index:999;
   margin:0;
   height:auto;
@@ -1503,6 +1503,10 @@ div label[for=ui-component-toggle__yearly] {
   padding:8px;
   visibility: visible;
 
+}
+
+.darkmode-btn svg {
+  max-width: unset;
 }
 
 
